# AURA

./: .commit_msg.txt  .gitignore  AURA_ENGINEERING_SPEC.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  VERIFICATION_LOG.md  _audit_deep_out.txt  _audit_deep_walk.py  _audit_out.txt  _audit_probe.py  _audit_prove_bypass.py  aura.py  config.example.yaml  config.yaml  config.yaml.example  main.py  plugins_manifest.yaml  pyproject.toml  requirements.txt
.aura/memory/: chroma.sqlite3
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  module_proposal.md
.github/workflows/: ci.yml  pages.yml
aura/: __init__.py  __main__.py  cli.py
aura-core/: README.md
aura-devtools/: README.md
aura-gui/: README.md
aura-memory/: README.md
aura/core/: __init__.py  audit_events.py  audit_log.py  command_engine.py  command_registry.py  config_loader.py  error_handler.py  errors.py  event_bus.py  execution_engine.py  intent.py  intent_router.py  io.py  llm_brain.py  logger.py  mode_monitor.py  ollama_client.py  param_schema.py  pipeline_state.py  plugin_base.py  plugin_loader.py  plugin_manifest.py  policy.py  result.py  router.py  safety_gate.py  schema.py  schemas.py  session_controller.py  tracing.py  voice_executor.py  worker_client.py
aura/executors/: __init__.py  browser_executor.py  shell_executor.py  system_executor.py  system_monitor.py
aura/intents/: __init__.py  system_intents.py
aura/memory/: __init__.py  context_retriever.py
aura/modules/: __init__.py  stt.py  tts.py  wake_word.py
aura/runtime/: __init__.py  command_registry.py  execution_engine.py  planner.py  router.py  worker_client.py
aura/schemas/: __init__.py  command.py  intent.py
aura/security/: __init__.py  audit_events.py  audit_log.py  permissions.py  plugin_manifest.py  rate_limiter.py  safety_gate.py  sandbox.py
aura/utils/: __init__.py  app_registry.py  audio_input.py  event_bus.py  mic_lock.py  mode_monitor.py
aura/worker/: __init__.py  __main__.py  server.py
command_engine/: dispatcher.py  file_manager.py  logger.py  npm_executor.py  path_utils.py  process_manager.py  system_check.py
core/: config_loader.py  context.py  intent.py  io.py  llm_brain.py  policy.py  result.py
core/backends/: base.py  factory.py  ollama_backend.py
docs/: architecture.md  phases.md
docs/decisions/: naming.md
modules/: llm_brain.py  log_reader.py  project_scaffolder.py
plugins/: __init__.py
plugins/browser/: __init__.py  plugin.py
plugins/calendar/: __init__.py  plugin.py
plugins/docker/: __init__.py  plugin.py
plugins/git/: __init__.py  plugin.py
plugins/gmail/: __init__.py  plugin.py
plugins/memory/: __init__.py  plugin.py
plugins/spotify/: __init__.py  plugin.py
plugins/system/: __init__.py  executor.py  plugin.py  templates.py
plugins/vision/: __init__.py  plugin.py
plugins/voice/: __init__.py  plugin.py
plugins/weather/: __init__.py  plugin.py
public/: index.html  script.js  styles.css
scripts/: check_aura_voice.py  diagnose_tts_idle.py  diagnose_tts_pipeline.py  diagnose_wake_word.py  fix13_verify.py  phase2_integration_test.py  repro_live_rag_tts.py
tests/: _inprocess_port.py  conftest.py  test_action_id_parser.py  test_audit_chain.py  test_audit_chain_rotation.py  test_audit_events_registry.py  test_audit_rotation_sidecar.py  test_capability_lockdown.py  test_cf1_closure_bypass.py  test_closure_walk.py  test_config_loader.py  test_config_ranges.py  test_destructive_gate.py  test_dispatcher.py  test_entries_immutability.py  test_error_handler.py  test_event_bus.py  test_file_manager.py  test_lockdown.py  test_logger.py  test_param_limits.py  test_param_schema.py  test_path_utils.py  test_per_source_rate_limit.py  test_permissions.py  test_phase2_audit_part1.py  test_phase2_audit_part2.py  test_plan_trace.py  test_planner.py  test_plugin_loader.py  test_plugin_manifest.py  test_policy.py  test_process_manager.py  test_rag_integration.py  test_rate_limiter.py  test_registry.py  test_registry_enforcement.py  test_router_pipeline.py  test_safety_gate.py  test_sandbox.py  (+8 more)
tests/fixtures/: audio_noise.npy  audio_silence.npy  audio_speech_mock.npy  bad_config.yaml  config_missing_section.yaml  config_valid.yaml
tests/unit/: test_cli.py  test_config.py  test_file_operations.py  test_log_reader.py  (+5 more)
