[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aura*", "plugins*"]

[project]
name = "aura-assistant"
version = "2.0.0"
description = "Autonomous Unified Response Architecture — a fully offline AI developer assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aryan", url = "https://github.com/aryanjsx"},
]
keywords = [
    "automation",
    "developer-tools",
    "offline-ai",
    "voice-assistant",
    "local-llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

dependencies = [
    "psutil>=5.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

# Phase 2+ dependencies — uncomment as each phase ships:
# "openai-whisper",      # Phase 2 — Speech-to-Text
# "piper-tts",           # Phase 2 — Text-to-Speech
# "ollama",              # Phase 2 — Local LLM
# "gitpython",           # Phase 3 — Git automation
# "docker",              # Phase 3 — Docker SDK
# "PyQt6",               # Phase 4 — GUI dashboard
# "chromadb",            # Phase 5 — Vector memory

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
]

# Phase 2+ — uncomment as each phase ships:
# phase2 = ["openai-whisper", "piper-tts", "ollama"]
# phase3 = ["gitpython", "docker"]
# phase5 = ["PyQt6"]
# phase6 = ["chromadb"]
# phase7 = ["playwright"]

[project.scripts]
aura = "aura.cli:main"

[project.urls]
Homepage = "https://github.com/aryanjsx/AURA"
"Bug Tracker" = "https://github.com/aryanjsx/AURA/issues"
